--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,52 @@
-<script src="/bundle.js" charset="utf-8"></script>
+  <!-- Footer -->
+  <footer>
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
+                  <ul class="list-inline text-center">
+                      <li class="list-inline-item">
+                          <a href="#">
+                              <span class="fa-stack fa-lg">
+                                  <i class="fa fa-circle fa-stack-2x"></i>
+                                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                              </span>
+                          </a>
+                      </li>
+                      <li class="list-inline-item">
+                          <a href="#">
+                              <span class="fa-stack fa-lg">
+                                  <i class="fa fa-circle fa-stack-2x"></i>
+                                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                              </span>
+                          </a>
+                      </li>
+                      <li class="list-inline-item">
+                          <a href="#">
+                              <span class="fa-stack fa-lg">
+                                  <i class="fa fa-circle fa-stack-2x"></i>
+                                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                              </span>
+                          </a>
+                      </li>
+                  </ul>
+                  <p class="copyright text-muted">Copyright &copy; NILGE Website 2017</p>
+              </div>
+          </div>
+      </div>
+  </footer>
+
+  <script src="/bundle.js" charset="utf-8"></script>
+
+  <!-- jQuery Version 3.1.1 -->
+  <script src="lib/jquery/jquery.js"></script>
+
+  <!-- Tether -->
+  <script src="lib/tether/tether.min.js"></script>
+
+  <!-- Bootstrap Core JavaScript -->
+  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+
+  <!-- Theme JavaScript -->
+  <script src="js/clean-blog.min.js"></script>
 </body>
 </html>
