--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-   <meta charset="UTF-8">
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <meta name="description" content="">
+   <meta name="author" content="">
    <title>Personal Blog</title>
-   <meta content="width=device-width, initial-scale=1" name="viewport" />
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+   <!-- Bootstrap Core CSS -->
+   <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+   <!-- Additional fonts for this theme -->
+   <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+   <!-- Custom styles for this theme -->
+   <link href="/css/clean-blog.min.css" rel="stylesheet">
+
+   <!-- Temporary navbar container fix until Bootstrap 4 is patched -->
+   <style>
+   .navbar-toggler {
+       z-index: 1;
+   }
+
+   @media (max-width: 576px) {
+       nav > .container {
+           width: 100%;
+       }
+   }
+   </style>
    <base href="/" />
  </head>
- <body class="container">
+ <body>
