Prism Highlight with show language label

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -48,5 +48,8 @@
 
   <!-- Theme JavaScript -->
   <script src="js/clean-blog.min.js"></script>
+
+  <!-- Prism Highlight JavaScript -->
+  <script src="js/prism.js"></script>
 </body>
 </html>
