--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,7 +31,7 @@
    }
    </style>
 
-   <link rel="stylesheet" href="/css/markedup.css">
+   <link rel="stylesheet" href="/css/prism.css">
    <base href="/" />
  </head>
  <body>
