--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,7 +31,11 @@
    }
    </style>
 
+    <!-- markdown code highlight -->
    <link rel="stylesheet" href="/css/prism.css">
+
+   <!-- self define style -->
+   <link rel="stylesheet" href="/css/style.css">
    <base href="/" />
  </head>
  <body>
