image header imageStyle input, home list, prism.js import in different way

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -50,6 +50,6 @@
   <script src="js/clean-blog.min.js"></script>
 
   <!-- Prism Highlight JavaScript -->
-  <script src="js/prism.js"></script>
+  <!-- <script src="js/prism.js"></script> -->
 </body>
 </html>
