add tag service

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -36,6 +36,9 @@
 
    <!-- self define style -->
    <link rel="stylesheet" href="/css/style.css">
+
+   <!-- react tags -->
+   <link rel="stylesheet" href="/css/reactTags.css">
    <base href="/" />
  </head>
  <body>
