--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -28,6 +28,14 @@
                               </span>
                           </a>
                       </li>
+                      <li class="list-inline-item">
+                          <a href="#">
+                              <span class="fa-stack fa-lg">
+                                  <i class="fa fa-circle fa-stack-2x"></i>
+                                  <i class="fa fa-weixin fa-stack-1x fa-inverse"></i>
+                              </span>
+                          </a>
+                      </li>
                   </ul>
                   <p class="copyright text-muted">Copyright &copy; NILGE Website 2017</p>
               </div>
