--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,7 +7,7 @@
               <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
                   <ul class="list-inline text-center">
                       <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://twitter.com/gxy26904?lang=en">
                               <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle fa-stack-2x"></i>
                                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -15,7 +15,7 @@
                           </a>
                       </li>
                       <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.facebook.com/profile.php?id=100004292980896">
                               <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle fa-stack-2x"></i>
                                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -23,7 +23,7 @@
                           </a>
                       </li>
                       <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://github.com/NilGE">
                               <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle fa-stack-2x"></i>
                                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -31,10 +31,10 @@
                           </a>
                       </li>
                       <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.linkedin.com/in/xiangyu-ge-162426b0/">
                               <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle fa-stack-2x"></i>
-                                  <i class="fa fa-weixin fa-stack-1x fa-inverse"></i>
+                                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                               </span>
                           </a>
                       </li>
