home and post page style finished

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,65 +1,49 @@
   <!-- Footer -->
-  <footer>
-      <hr />
-      <br />
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
-                  <ul class="list-inline text-center">
-                      <li class="list-inline-item">
-                          <a href="https://twitter.com/gxy26904?lang=en">
-                              <span class="fa-stack fa-lg">
+  <footer class="site-footer">
+      <ul class="list-inline text-center">
+          <li class="list-inline-item">
+                  <a href="https://twitter.com/gxy26904?lang=en">
+                          <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle fa-stack-2x"></i>
                                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                              </span>
-                          </a>
-                      </li>
-                      <li class="list-inline-item">
-                          <a href="https://www.facebook.com/profile.php?id=100004292980896">
-                              <span class="fa-stack fa-lg">
+                          </span>
+                  </a>
+          </li>
+          <li class="list-inline-item">
+                  <a href="https://www.facebook.com/profile.php?id=100004292980896">
+                          <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle fa-stack-2x"></i>
                                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                              </span>
-                          </a>
-                      </li>
-                      <li class="list-inline-item">
-                          <a href="https://github.com/NilGE">
-                              <span class="fa-stack fa-lg">
+                          </span>
+                  </a>
+          </li>
+          <li class="list-inline-item">
+                  <a href="https://github.com/NilGE">
+                          <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle fa-stack-2x"></i>
                                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                              </span>
-                          </a>
-                      </li>
-                      <li class="list-inline-item">
-                          <a href="https://www.linkedin.com/in/xiangyu-ge-162426b0/">
-                              <span class="fa-stack fa-lg">
+                          </span>
+                  </a>
+          </li>
+          <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/xiangyu-ge-162426b0/">
+                          <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle fa-stack-2x"></i>
                                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                              </span>
-                          </a>
-                      </li>
-                  </ul>
-                  <p class="copyright text-muted">Copyright &copy; NILGE Website 2017</p>
-              </div>
-          </div>
-      </div>
+                          </span>
+                  </a>
+          </li>
+      </ul>
+      <p class="copyright text-center">Copyright &copy; NILGE Website 2017</p>
   </footer>
 
   <script src="/bundle.js" charset="utf-8"></script>
 
   <!-- jQuery Version 3.1.1 -->
-  <script src="lib/jquery/jquery.js"></script>
+  <script src="lib/jquery/jquery-3.2.1.min.js"></script>
 
-  <!-- Tether -->
-  <script src="lib/tether/tether.min.js"></script>
+  <script type="text/javascript" src="js/style.js">
 
-  <!-- Bootstrap Core JavaScript -->
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-
-  <!-- Theme JavaScript -->
-  <script src="js/clean-blog.min.js"></script>
-
-  <!-- Prism Highlight JavaScript -->
-  <!-- <script src="js/prism.js"></script> -->
+  </script>
 </body>
 </html>
