parse latex in remarkable

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -362,6 +362,9 @@ h1.post-title {
 .post-content {
   padding-top: 50px; }
 
+div.katex-rendered {
+  text-align: center; }
+
 /* ==========================================================================
 	8. Animations
 	========================================================================== */
