--- a/sass/css/style.scss
+++ b/sass/css/style.scss
@@ -415,6 +415,10 @@ h1.post-title {
 	padding-top: 50px;
 }
 
+div.katex-rendered {
+	text-align: center;
+}
+
 /* ==========================================================================
 	8. Animations
 	========================================================================== */
