--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,6 +31,9 @@
 
    <!-- react tags -->
    <link rel="stylesheet" href="/css/reactTags.css">
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
+
    <base href="/" />
  </head>
  <body>
