--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -37,7 +37,7 @@
       <p class="copyright text-center">Copyright &copy; NILGE Website 2017</p>
   </footer>
 
-  <script src="/bundle.js" charset="utf-8"></script>
+  <script src="/public.js" charset="utf-8"></script>
 
   <!-- jQuery Version 3.1.1 -->
   <script src="lib/jquery/jquery-3.2.1.min.js"></script>
