--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -6,13 +6,26 @@
    <meta name="description" content="">
    <meta name="author" content="">
    <title>Personal Blog</title>
+   <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+   <!-- markdown code highlight -->
+   <link rel="stylesheet" href="/css/prism.css">
+
+   <!-- self define style -->
+   <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="/css/editor.css">
+
+   <!-- react tags -->
+   <link rel="stylesheet" href="/css/reactTags.css">
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
 
    <base href="/" />
  </head>
  <body>
-<div id="app"></div>
+<div id="admin"></div>
 <script src="/admin.js" charset="utf-8"></script>
-
-</script>
+<script src="lib/jquery/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/style.js">
 </body>
 </html>
