seperate frontend and backend css style

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -12,8 +12,8 @@
    <link rel="stylesheet" href="/css/prism.css">
 
    <!-- self define style -->
-   <link rel="stylesheet" href="/css/style.css">
-   <link rel="stylesheet" href="/css/editor.css">
+   <link rel="stylesheet" href="/css/common.css">
+   <link rel="stylesheet" href="/css/backend.css">
 
    <!-- react tags -->
    <link rel="stylesheet" href="/css/reactTags.css">
