--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,7 +27,8 @@
    <link rel="stylesheet" href="/css/prism.css">
 
    <!-- self define style -->
-   <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="/css/common.css">
+   <link rel="stylesheet" href="/css/frontend.css">
 
    <!-- react tags -->
    <link rel="stylesheet" href="/css/reactTags.css">
