--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,14 +24,14 @@
    </style>
 
     <!-- markdown code highlight -->
-   <link rel="stylesheet" href="/css/prism.css">
+   <link rel="stylesheet" href="/lib/css/prism.css">
 
    <!-- self define style -->
    <link rel="stylesheet" href="/css/common.css">
    <link rel="stylesheet" href="/css/frontend.css">
 
    <!-- react tags -->
-   <link rel="stylesheet" href="/css/reactTags.css">
+   <link rel="stylesheet" href="/lib/css/reactTags.css">
 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
 
