--- a/sass/css/common.scss
+++ b/sass/css/common.scss
@@ -56,9 +56,9 @@ input {
 	font-size: 14px;
 	border: 1px solid #dfe1e3;
 	border-radius: 4px;
-	padding-left: 10px;
+	padding: 0 10px;
 	font-weight: 400;
-	width: 100%;
+	width: calc(100% - 20px);
 	margin: 0px;
 }
 
