--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -9,14 +9,17 @@
    <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
    <!-- markdown code highlight -->
-   <link rel="stylesheet" href="/css/prism.css">
+   <link rel="stylesheet" href="/lib/css/prism.css">
 
    <!-- self define style -->
    <link rel="stylesheet" href="/css/common.css">
    <link rel="stylesheet" href="/css/backend.css">
 
    <!-- react tags -->
-   <link rel="stylesheet" href="/css/reactTags.css">
+   <link rel="stylesheet" href="/lib/css/reactTags.css">
+
+   <!-- datepicker -->
+   <link rel="stylesheet" href="/lib/css/react-datepicker.css">
 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
 
