New tag input style finished

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -21,6 +21,8 @@
    <!-- datepicker -->
    <link rel="stylesheet" href="/lib/css/react-datepicker.css">
 
+   <link rel="stylesheet" href="/lib/css/react-tagsinput.css">
+
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
 
    <base href="/" />
