--- a/sass/css/frontend.scss
+++ b/sass/css/frontend.scss
@@ -38,6 +38,9 @@
 	padding-top: 60px; /* Place content 60px from the top */
 	transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 	font-family: "Open Sans", sans-serifscreen;
+	.fix-width {
+		width: 250px;
+	}
 }
 
 /* The navigation menu links */
