--- a/sass/css/backend.scss
+++ b/sass/css/backend.scss
@@ -105,7 +105,7 @@ body {
        font-weight: 700;
        margin-right: auto;
      }
-     .setting {
+     .setting-gear {
        border: none;
        outline: none;
        background: 0 0;
