--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -29,7 +29,7 @@
  </head>
  <body>
 <div id="admin"></div>
-<script src="/admin.js" charset="utf-8"></script>
+<script src="admin.js" charset="utf-8"></script>
 <script src="lib/jquery/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/style.js">
 </body>
